# chip8rust

./: Cargo.toml
src/: helpers.rs  main.rs  types.rs
