[package]
name = "chip8"
version = "0.1.0"
authors = ["taisei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34", features = ["bundled"] }
color-eyre = "0.5"
structopt = "0.3"
derive_more = "0.99"
rand = "0.8"
